[package]
name = "stackq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = "0.4.0"
tower = "0.4.12"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"
hyper-tls = "0.5.0"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
